--- a/css/style.css
+++ b/css/style.css
@@ -1,148 +1,117 @@
-/* ========================================
-  Fixes Box Sizing
-======================================== */
-
-html
-{
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+* {
+    box-sizing: border-box;
 }
 
-*,
-*:before,
-*:after
-{
-  -webkit-box-sizing: inherit;
-     -moz-box-sizing: inherit;
-          box-sizing: inherit;
+.container {
+    width: 60%;
+    margin: 0 auto;
 }
 
-
-
-/* ========================================
-  Clears List Styles, Margin, and Padding
-======================================== */
-
-ol,
-ul
-{
-  margin: 0;
-  padding: 0;
-
-  list-style: none;
+.search {
+    text-align: center;
 }
 
-
-
-/* ========================================
-  General CSS
-======================================== */
-
-body
-{
-  color: #1c1c1c;
+input, 
+#no-results,
+.nav a {
+    font-family: 'Marvel', sans-serif;
+    color: slategrey;
 }
 
-/*header
-{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: white;
-}*/
-
-/* Search Box */
-
-.searchbox
-{
-  font-size: 1em;
-
-  display: block;
-
-  width: 80%;
-  max-width: 300px;
-  height: 40px;
-  margin: 30px auto;
-  padding: 3px;
-
-  text-align: center;
-
-  border: solid lightgrey 2px;
-  border-radius: 8px;
+input {
+    width: 100%;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+    padding: 10px;
+    margin-top: 1.5em;
+    margin-bottom: 0.5em;
+    font-size: 1.125em;
 }
 
-.searchbox:focus
-{
-  outline: none;
+input:focus {
+    outline: none !important;
+    border:1px solid lightgrey;
+    box-shadow: 0 0 10px rgb(152, 154, 156);
 }
 
-/* Gallery */
-
-.content
-{
-  max-width: 1040px;
-  margin: 70px auto;
+.thumbnails {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.list
-{
-  text-align: center;
+#no-results{
+    font-size: 1.25em;
 }
 
-.list li
-{
-  display: inline-block;
-
-  margin: 0 auto;
-  padding: 20px;
+img {
+    width: 9.375em;
+    border-radius: 3px;
 }
 
-.list img
-{
-  width: 160px;
-  height: 160px;
+.img-padding {
+    padding: 1em;
 }
 
-/* Footer */
+img:hover {
+   box-shadow: inset 0 0 0 15px silver;
+}
 
-footer
-{
-  font-size: .8em;
+.nav {
+    font-family: 'Marvel', sans-serif;
+    text-align: center;
+    font-size: 19px;
+    margin-bottom: 1em;
+}
 
-  clear: both;
-
-  margin-top: 50px;
-  margin-bottom: 50px;
-
-  text-align: center;
+.nav a {
+    text-decoration: none;
 }
 
 
-/* ========================================
-  Media Queries
-======================================== */
 
-/* Tablets */
 
-/*@media screen and (min-width: 480px)
-{
-}*/
+/* Media Query */
+@media (min-width: 768px) {
 
-/* Large Displays */
+    input {
+        width: 75%;
+    }
 
-@media screen and (min-width: 1026px)
-{
-  .searchbox
-  {
-    max-width: 460px;
-  }
+    .img-padding {
+        padding: 1.5em;
+    }
 
-  .gallery li
-  {
-    padding: 30px;
-  }
+}
 
-  /* Max-width: 1600px */
+@media (min-width: 1024px){
+
+    body {
+        max-width: 1024px;
+        margin: 0 auto;
+    }
+
+    input {
+        width: 45%;
+    }
+
+    .container {
+        width: 90%;
+        height: 800px;
+        border-bottom: 1px solid lightgrey;
+    }
+
+    img {
+        width: 10.9375em;
+    }
+    
+    .nav {
+        display: none;
+    }
+
+}
+
+.lightbox {
+    position:fixed;
 }
